tdf#104944 gtk3: Ignore mouse up event if the wrong frame

Change-Id: I3d0aad6d2b434866df9110d3b8493fec2d2c94fe